<resources>
    <string name="app_name">mongol-library demo</string>
    <string name="mongol_label_activity_title">MongolLabel</string>
    <string name="mongol_textview_activity_title">MongolTextView</string>
    <string name="mongol_edittext_activity_title">MongolEditText</string>
    <string name="unicode_activity_title">Unicode Renderer</string>
    <string name="convert_code_activity_title">Unicode &lt;--&gt; Menksoft</string>
    <string name="mongol_font_activity_title">MongolFont</string>
    <string name="keyboard_activity_title">Keyboard</string>
    <string name="keyboard_candidate_activity_title">Keyboard Candidate View</string>
    <string name="mongol_toast_activity_title">MongolToast</string>
    <string name="mongol_button_activity_title">MongolButton</string>
    <string name="mongol_alert_dialog_activity_title">MongolAlertDialog</string>
    <string name="horizontal_recyclerview_activity_title">Horizontal RecyclerView</string>

    <string name="short_string">ᠮᠣᠩᠭᠣᠯ</string>
    <!--&lt;!&ndash;<string name="medium_string">"An &#128512;awesome &#128515;string with a few &#128521;emojis!"</string>&ndash;&gt;-->
    <string name="medium_string">ᠨᠢᠭᠡ ᠬᠣᠶᠠᠷ ᠭᠣᠷᠪᠠ one two three 一二三</string>
    <string name="long_string">ᠨᠢᠭᠡ ᠬᠣᠶᠠᠷ ᠭᠣᠷᠪᠠ ᠳᠥᠷᠪᠡ ᠲᠠᠪᠤ ᠵᠢᠷᠭᠤᠭ᠎ᠠ ᠳᠣᠯᠣᠭ᠎ᠠ ᠨᠠᠢᠮᠠ ᠶᠢᠰᠦ ᠠᠷᠪᠠ ᠠᠷᠪᠠᠨ ᠨᠢᠭᠡ ᠠᠷᠪᠠᠨ ᠬᠣᠶᠠᠷ ᠠᠷᠪᠠᠨ ᠭᠣᠷᠪᠠ ᠠᠷᠪᠠᠨ ᠳᠥᠷᠪᠡ ᠠᠷᠪᠠᠨ ᠲᠠᠪᠤ ᠠᠷᠪᠠᠨ ᠵᠢᠷᠭᠤᠭ᠎ᠠ ᠠᠷᠪᠠᠨ ᠳᠣᠯᠣᠭ᠎ᠠ ᠠᠷᠪᠠᠨ ᠨᠠᠢᠮᠠ ᠠᠷᠪᠠ ᠶᠢᠰᠦ ᠬᠣᠷᠢ ᠬᠣᠷᠢᠨ ᠨᠢᠭᠡ ᠬᠣᠷᠢᠨ ᠬᠣᠶᠠᠷ ᠬᠣᠷᠢᠨ ᠭᠣᠷᠪᠠ ᠬᠣᠷᠢᠨ ᠳᠥᠷᠪᠡ ᠬᠣᠷᠢᠨ ᠲᠠᠪᠤ ᠬᠣᠷᠢᠨ ᠵᠢᠷᠭᠤᠭ᠎ᠠ ᠬᠣᠷᠢᠨ ᠳᠣᠯᠣᠭ᠎ᠠ ᠬᠣᠷᠢᠨ ᠨᠠᠢᠮᠠ ᠬᠣᠷᠢ ᠶᠢᠰᠦ  ᠭᠣᠴᠢ one two three four five six seven eight nine ten 一二三四五六七八九十😃😊😜😁😬😮🐴🐂🐫🐑🐐</string>

    <string name="font_name_qagan">ᠴᠠᠭᠠᠨ ᠲᠢᠭ</string>
    <string name="font_name_garqag">ᠭᠠᠷᠴᠠᠭ ᠲᠢᠭ</string>
    <string name="font_name_hara">ᠬᠠᠷ᠎ᠠ ᠲᠢᠭ</string>
    <string name="font_name_scnin">ᠰᠣᠨᠢᠨ ᠲᠢᠭ</string>
    <string name="font_name_hawang">ᠬᠠᠸᠠᠩ ᠲᠢᠭ</string>
    <string name="font_name_qimed">ᠴᠢᠮᠡᠳ ᠲᠢᠭ</string>
    <string name="font_name_narin">ᠨᠠᠷᠢᠨ ᠲᠢᠭ</string>
    <string name="font_name_mcdcnbar">ᠮᠣᠳᠣᠨ ᠪᠠᠷ ᠲᠢᠭ</string>
    <string name="font_name_amglang">ᠠᠮᠤᠭᠤᠯᠠᠩ ᠲᠢᠭ</string>
    <string name="font_name_sidam">ᠰᠢᠳᠠᠮ ᠲᠢᠭ</string>
    <string name="font_name_qingming">ᠴᠢᠩ ᠮᠢᠩ ᠲᠢᠭ</string>
    <string name="font_name_onqa_hara">ᠤᠨᠴᠠ ᠬᠠᠷ᠎ᠠ ᠲᠢᠭ</string>
    <string name="font_name_svgvnag">ᠰᠤᠭᠤᠨᠠᠭ ᠲᠢᠭ</string>
    <string name="font_name_svlbiya">ᠰᠤᠯᠪᠢᠶ᠎ᠠ ᠲᠢᠭ</string>
    <string name="font_name_jclgq">ᠵᠣᠯᠭᠠᠴᠠ ᠲᠢᠭ</string>
    <string name="keyboard_custom_system_activity_title">Custom System Keyboard</string>


    <string name="xml_string">xml ᠰᠠᠢᠨ ᠪᠠᠢᠨ᠎ᠠ ᠤᠤ︖</string>
    <string name="mongol_menu_activity_title">MongolMenu</string>
    <string name="keyboard_navigation_activity_title">Keyboard navigation</string>
    <string name="main_keyboard_activity_title">Keyboard demos</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

</resources>
